@@ -72,6 +72,6 @@ namespace vrj
        */
       virtual void sync();
    };
-}; // end namespace
+} // end namespace
 
 #endif   /* _VRJUGGLER_SOUND_MANAGER_SONIX_ */
