@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-18-2004 patrickh    Updated to require Sonix 0.5.0.
 Nov-13-2004 patrickh    Updated to require Gadgeteer 0.20.0.
                         NEW VERSION: 1.1.162
 Nov-05-2004 patrickh    VRJConfig is now installed as a bundle on Mac OS X (in
